Initial backend containing user login and registration and talent input

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "services/project-management",
     "services/talent-management",
     "services/user-management"
-  ]
+  ],
+  "dependencies": {
+    "dotenv": "^16.4.5"
+  }
 }
