--- a/services/talent-management/package.json
+++ b/services/talent-management/package.json
@@ -1,18 +1,23 @@
 {
-    "name": "talent-management-service",
-    "version": "0.0.1",
-    "description": "A microservice for managing and listing talent.",
-    "main": "index.js",
-    "scripts": {
-      "start": "node index.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "sweng861-fa24-001-group4",
-    "license": "MIT",
-    "dependencies": {
-      "express": "^4.18.2"
-    },
-    "devDependencies": {
-      "nodemon": "^2.0.22"
-    }
+  "name": "talent-management-service",
+  "version": "0.0.1",
+  "description": "A microservice for managing and listing talent.",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "sweng861-fa24-001-group4",
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "express-validator": "^7.2.0",
+    "mongoose": "^6.13.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
+}
