Add containerization and environment setup
- Update .gitignore to include environment files
- Add Dockerfile for front-end/tms service
- Add docker-compose.yml for container orchestration
- Add .env.example files for microservice
- Update package.json files for notifications, project-management, and
  user-management services to remove start script. This prevents erros
  when running the services in containers, as the scripts referred to
  files that are not yet present.
- Modify server.js in user-management service to use DATABASE_URI for
  the MongoDB connection
- Docker-compose can now be used with the docker-compose up, down, build
  and other commands to deploy the services in containers, as a group on
  a single server. This should especially help for development.

--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
   "directories": {
     "doc": "docs"
   },
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "sweng861-fa24-001-group4",
   "license": "MIT",
   "workspaces": [
+    "services/front-end/tms",
     "services/notifications",
     "services/project-management",
     "services/talent-management",
