--- a/services/front-end/tms/Dockerfile
+++ b/services/front-end/tms/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:18-alpine
 
 # Set the working directory in the container
-WORKDIR /app/user-management
+WORKDIR /app/front-end/tms
 
 # Copy the package.json and package-lock.json files
 COPY package*.json .
@@ -10,11 +10,11 @@ COPY package*.json .
 # Install the dependencies
 RUN npm install
 
-# Copy the rest of the application code
+# Copy .env file
 COPY . .
 
 # Copy .env file
-COPY .env /app/user-management/.env
+COPY .env /app/front-end/tms/.env
 
 # Expose the application's port
 EXPOSE 3000
