--- a/services/notifications/Dockerfile
+++ b/services/notifications/Dockerfile
@@ -2,16 +2,19 @@
 FROM node:18-alpine
 
 # Set the working directory in the container
-WORKDIR /app
+WORKDIR /app/notifications
 
 # Copy the package.json and package-lock.json files
-COPY package.json .
+COPY package*.json .
 
 # Install the dependencies
 RUN npm install
 
 # Copy the rest of the application code
 COPY . .
+
+# Copy .env file
+COPY .env app/notifications/.env
 
 # Expose the application's port
 EXPOSE 3000
