--- a/services/notifications/package.json
+++ b/services/notifications/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "notifications-service",
-    "version": "0.0.1",
-    "description": "A microservice for managing app notifications.",
-    "main": "index.js",
-    "scripts": {
-      "start": "node index.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "sweng861-fa24-001-group4",
-    "license": "MIT",
-    "dependencies": {
-      "express": "^4.18.2"
-    },
-    "devDependencies": {
-      "nodemon": "^2.0.22"
-    }
+  "name": "notifications-service",
+  "version": "0.0.1",
+  "description": "A microservice for managing app notifications.",
+  "main": "index.js",
+  "scripts": {
+    "start": "",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "sweng861-fa24-001-group4",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
+}
