--- a/services/project-management/Dockerfile
+++ b/services/project-management/Dockerfile
@@ -1,17 +1,20 @@
 # Use an official Node.js runtime as the base image
 FROM node:18-alpine
 
-# Set the working directory in the container
-WORKDIR /app
+# Create app directory
+WORKDIR /app/project-management
 
 # Copy the package.json and package-lock.json files
-COPY package.json .
+COPY package*.json ./
 
-# Install the dependencies
+# Install app dependencies
 RUN npm install
 
 # Copy the rest of the application code
 COPY . .
+
+# Copy .env file
+COPY .env app/project-management/.env
 
 # Expose the application's port
 EXPOSE 3000
