--- a/services/user-management/package.json
+++ b/services/user-management/package.json
@@ -1,30 +1,31 @@
 {
-    "name": "user-management-service",
-    "version": "0.0.1",
-    "description": "A microservice for managing users.",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "sweng861-fa24-001-group4",
-    "license": "MIT",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "cors": "^2.8.5",
-        "express": "^4.21.0",
-        "express-validator": "^7.2.0",
-        "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.7.0",
-        "passport": "^0.7.0",
-        "passport-jwt": "^4.0.1"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.22"
-    },
-    "directories": {
-        "test": "tests"
-    },
-    "keywords": []
+  "name": "user-management-service",
+  "version": "0.0.1",
+  "description": "A microservice for managing users.",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "sweng861-fa24-001-group4",
+  "license": "MIT",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "keywords": []
 }
