--- a/services/project-management/package.json
+++ b/services/project-management/package.json
@@ -2,17 +2,23 @@
   "name": "project-management-service",
   "version": "0.0.1",
   "description": "A microservice for managing and listing projects.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sweng861-fa24-001-group4",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "mongoose": "^8.7.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "eslint": "^9.12.0",
+    "globals": "^15.10.0",
     "nodemon": "^2.0.22"
   }
 }
