Initial Branch Commit

--- a/services/project-management/.env.example
+++ b/services/project-management/.env.example
@@ -2,6 +2,8 @@
 
 # DB connection strings
 DATABASE_URI=mongodb://mongo:27017/project-management
+DATABASE_USER:db_user
+DATABASE_PASSWORD:db_password
 
 # CORS origins for frontend applications
 CORS_ORIGIN_FRONTEND_PROJECT_MANAGEMENT=http://localhost:3000
