--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: ./services/user-management
       dockerfile: Dockerfile
     ports:
-      - '5001:3000'
+      - '5001:5001'
     env_file:
       - ./services/user-management/.env
     environment:
@@ -21,7 +21,7 @@ services:
       context: ./services/talent-management
       dockerfile: Dockerfile
     ports:
-      - '5002:3000'
+      - '5002:5002'
     env_file:
       - ./services/talent-management/.env
     environment:
@@ -36,7 +36,7 @@ services:
       context: ./services/project-management
       dockerfile: Dockerfile
     ports:
-      - '5003:3000'
+      - '5003:5003'
     env_file:
       - ./services/project-management/.env
     environment:
@@ -51,7 +51,7 @@ services:
       context: ./services/notifications
       dockerfile: Dockerfile
     ports:
-      - '5004:3000'
+      - '5004:5004'
     env_file:
       - ./services/notifications/.env
     environment:
@@ -73,6 +73,7 @@ services:
 
   mongo:
     image: mongo:latest
+    container_name: mongo
     ports:
       - '27018:27017' # Changed port mapping
     volumes:
