--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "services/user-management"
   ],
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "papaparse": "^5.4.1"
   }
 }
