--- a/services/notifications/.env.example
+++ b/services/notifications/.env.example
@@ -1,7 +1,7 @@
 # Example of .env file for notifications service
 
 # DB connection strings
-DATABASE_URI=mongodb://mongo:27017/notification
+DATABASE_URI=mongodb://mongo:27017/notifications
 
 # CORS origins for frontend applications
 CORS_ORIGIN_FRONTEND_PROJECT_MANAGEMENT=http://localhost:3000
