--- a/services/project-management/package.json
+++ b/services/project-management/package.json
@@ -5,15 +5,24 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config jest.config.js"
   },
   "author": "sweng861-fa24-001-group4",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongoose": "^8.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
+    "@eslint/js": "^9.12.0",
+    "babel-jest": "^29.7.0",
+    "eslint": "^9.12.0",
+    "globals": "^15.10.0",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.22"
   }
 }
