--- a/services/project-management/package.json
+++ b/services/project-management/package.json
@@ -2,27 +2,17 @@
   "name": "project-management-service",
   "version": "0.0.1",
   "description": "A microservice for managing and listing projects.",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "jest --config jest.config.js"
+    "start": "",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sweng861-fa24-001-group4",
   "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "mongoose": "^8.7.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.7",
-    "@babel/preset-env": "^7.25.7",
-    "@eslint/js": "^9.12.0",
-    "babel-jest": "^29.7.0",
-    "eslint": "^9.12.0",
-    "globals": "^15.10.0",
-    "jest": "^29.7.0",
     "nodemon": "^2.0.22"
   }
 }
