--- a/services/notifications/package.json
+++ b/services/notifications/package.json
@@ -10,7 +10,10 @@
   "author": "sweng861-fa24-001-group4",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
