--- a/services/project-management/package.json
+++ b/services/project-management/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest --config jest.config.js"
   },
   "author": "sweng861-fa24-001-group4",
