--- a/services/project-management/package.json
+++ b/services/project-management/package.json
@@ -23,6 +23,7 @@
     "eslint": "^9.12.0",
     "globals": "^15.10.0",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.0.1",
     "nodemon": "^2.0.22"
   }
 }
